--- a/src/style.css
+++ b/src/style.css
@@ -44,6 +44,10 @@ header, footer {
   background: var(--color-background);
 }
 
+.color {
+  color: attr(text-color);
+}
+
 .flip {
   padding: 10px 30px;
   font-size: 18px;
@@ -59,7 +63,6 @@ a {
   font-weight: 600;
 }
 
-/* Mobile Layout */
 @media (max-width: 500px) {
   .colorflip {
     width: 100vw;
