--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,7 @@
   --font-size: 16px;
   --font-family: Inter, "Segoe UI";
   --color-background: rgba(38, 42, 44, 95%);
+  --color-text: #eee;
 }
 
 *,*::before,*::after {
@@ -25,14 +26,14 @@ header, footer {
   display: flex;
   width: 100vw;
   background-color: var(--color-background);
-  color: #fff;
+  color: var(--color-text);
   padding: 10px;
   justify-content: center;
   align-items: center;
 }
 
 .colorflip {
-  color: white;
+  color: var(--color-text);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -44,23 +45,20 @@ header, footer {
   background: var(--color-background);
 }
 
-.color {
-  color: attr(text-color);
-}
-
 .flip {
   padding: 10px 30px;
   font-size: 18px;
   border-radius: 8px;
   border-style: none;
-  color: #fff;
+  color: var(--color-text);
   background-color: var(--color-background);
-  border: 2px solid #fff;
+  border: 2px solid var(--color-text);
 }
 
 a {
   text-decoration: underline;
   font-weight: 600;
+  color: var(--color-text);
 }
 
 @media (max-width: 500px) {
