allow eslint to fix all files, checking src/scripts; Add accent color as color generated on start

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -5,7 +5,7 @@
   --font-family: Inter, 'Segoe UI';
   --color-background: rgba(38, 42, 44, 95%);
   --color-text: #eee;
-  --color-accent: rgba(19, 164, 73, 0.95);
+  --color-accent: #28994c;
 }
 
 *,
